feat: Add error messages

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
             crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js"></script>
-        <script async defer
+        <script async defer onerror="mapfail()"
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAoVd2-6JMxPX2yUHVIfIkc8z-19bdm9YY&callback=initMap">
         </script>
         <script src="js/script.js"></script>
