--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
         <!-- Page Icon & Title on tab -->
         <title>Istanbul Explorer</title>
-        <link rel="shortcut icon" type="image/x-icon" href="img/kk.png" />
+        <link rel="shortcut icon" type="image/x-icon" href="img/kk.png">
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, maximum-scale=1, minimum-scale=1"/>
@@ -42,7 +42,7 @@
         </nav>
 
         <!-- Hamburger Icon -->
-        <div class="navigator">
+        <div data-bind="click: openNav" class="navigator">
             <div class="nav-icon"></div>
         </div>
 
